@@ -24,7 +24,7 @@ import org.junit.Test;
 import org.apache.sysds.api.DMLScript;
 import org.apache.sysds.common.Types.ExecMode;
 import org.apache.sysds.hops.OptimizerUtils;
-import org.apache.sysds.lops.LopProperties.ExecType;
+import org.apache.sysds.common.Types.ExecType;
 import org.apache.sysds.runtime.matrix.data.MatrixValue.CellIndex;
 import org.apache.sysds.test.AutomatedTestBase;
 import org.apache.sysds.test.TestConfiguration;
@@ -98,7 +98,7 @@ public class RewriteFoldRCBindTest extends AutomatedTestBase
 			
 			//compare matrices 
 			Double ret = readDMLMatrixFromOutputDir("R").get(new CellIndex(1,1));
-			Assert.assertEquals("Wrong result", new Double(5*rows*cols), ret);
+			Assert.assertEquals("Wrong result", Double.valueOf(5*rows*cols), ret);
 			
 			//check for applied rewrites
 			if( rewrites ) {
