@@ -23,7 +23,7 @@ import org.junit.Assert;
 import org.junit.Test;
 import org.apache.sysds.api.DMLScript;
 import org.apache.sysds.common.Types.ExecMode;
-import org.apache.sysds.lops.LopProperties.ExecType;
+import org.apache.sysds.common.Types.ExecType;
 import org.apache.sysds.runtime.matrix.data.MatrixValue.CellIndex;
 import org.apache.sysds.test.AutomatedTestBase;
 import org.apache.sysds.test.TestConfiguration;
@@ -116,7 +116,7 @@ public class FullCumsumprodTest extends AutomatedTestBase
 			
 			runTest(true, false, null, -1); 
 			
-			Assert.assertEquals(new Double(rows),
+			Assert.assertEquals(Double.valueOf(rows),
 				readDMLMatrixFromOutputDir("C").get(new CellIndex(1,1)));
 		}
 		finally {
